<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">番茄钟</string>
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="reset">重置</string>
    <string name="switch_mode">切换模式</string>
    <string name="start_timer">开始计时</string>
    <string name="pause_timer">暂停计时</string>
    <string name="reset_timer">重置计时</string>
    <string name="work_mode">工作时间</string>
    <string name="short_break">短休息</string>
    <string name="long_break">长休息</string>
</resources>
